--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,12 @@
 <%- include('./partials/header')%>
-<h1>Home</h1>
-<p>Welcome to my Blog!</p>
+<h1>World Puzzle</h1>
+<p>Far beyond your imagination.</p>
+
 <% posts.forEach((post, i) => { %>
   <h1><%= posts[i].title %></h1>
   <p>
     <%= posts[i].content.substring(0, 100) +' ... ' %>
-    <a href="/posts/+<%=posts[i].title%>">Read More</a>
+    <a href="/posts/<%=posts[i].title%>">Read More</a>
   </p>
 <% }) %>
 <%- include('./partials/footer')%>
